k8s/base/externalname-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivagold-main-api
  namespace: hivagold
spec:
  type: ExternalName
  externalName: hivagold.com
